--- a/markup/css/all.css
+++ b/markup/css/all.css
@@ -954,6 +954,7 @@ figure {
 	font-size:14px;
 	line-height:19px;
 }
+.check{color:#fff;}
 .copyright>span>a{color:#e6e6e6;}
 .footer-bottom .copyright p{margin:0;}
 .footer-bottom .copyright p>a{
